# helenos

./: .bzrignore  .clang-format  .gitignore  .gitmodules  .travis.yml  HelenOS.config  LICENSE.md  Makefile  Makefile.config  README.md  README.md.license  README.svatba  _link.ld  _link.ld.in  boot.config  build.amd64  build.ia32  build.mips32  build.sparc64  build_all.sh  clean  clean.amd64  clean.ia32  clean.ia64  clean.mips32  clean.ppc32  clean.sparc64  configure  configure.sh  install.sh  install.sh.in  kernel.config  license_text_tmp.txt  meson.build  readme.txt  uspace.config  version
boot/: Makefile  Makefile.build  Makefile.common  Makefile.empty  Makefile.grub  Makefile.initrd  Makefile.silo  Makefile.uboot  Makefile.yaboot  boot.config  meson.build
boot/arch/abs32le/: Makefile.inc  meson.build
boot/arch/amd64/: Makefile.inc  meson.build
boot/arch/arm32/: Makefile.inc  _link.ld.in  meson.build
boot/arch/arm64/: Makefile.inc  _link.ld.in  meson.build
boot/arch/ia32/: Makefile.inc  grub  meson.build
boot/arch/ia32xen/: Makefile.inc
boot/arch/ia64/: Makefile.inc  _link.ld  _link.ld.in  meson.build
boot/arch/mips32/: Makefile.inc  _link.ld.in  meson.build
boot/arch/mips64/: Makefile.inc  _link.ld.in
boot/arch/ppc32/: Makefile.inc  _link.ld.in  meson.build
boot/arch/ppc64/: Makefile.inc
boot/arch/riscv64/: Makefile.inc  _link.ld.in  meson.build
boot/arch/sparc32/: Makefile.inc  _link.ld.in
boot/arch/sparc64/: Makefile.inc  _link.ld.in  meson.build
boot/arch/xen32/: Makefile.inc
boot/doc/: doxygroups.h
boot/genarch/: balloc.c  balloc.h  division.c  ofw.c  ofw.h  ofw_tree.c  ofw_tree.h
boot/genarch/include/: division.h  efi.h  ofw.h  ofw_tree.h  softint
boot/genarch/src/: division.c  efi.c  multiplication.c  ofw.c  ofw_tree.c
boot/generic/: align.h  genarch  gentypes.h  macros.h  memstr.h  printf.c  printf.h  stdarg.h  string.c  string.h
boot/generic/include/: align.h  assert.h  balloc.h  errno.h  gzip.h  halt.h  inflate.h  kernel.h  macros.h  memstr.h  payload.h  printf.h  printf_core.h  printf_verify.h  putchar.h  stdarg.h  stdbool.h  stddef.h  stdint.h  str.h  tar.h  typedefs.h  uchar.h  version.h
boot/generic/src/: balloc.c  gzip.c  inflate.c  kernel.c  memstr.c  payload.c  printf.c  printf_core.c  str.c  tar.c  version.c  vprintf.c
boot/grub/: README  amd64-efi  amd64-pc  build_dist.sh.in  grub.cfg.in  menu.lst  meson.build
boot/grub.efi/: README
boot/grub.efi/i386-efi/: acpi.mod  affs.mod  afs.mod  afs_be.mod  ahci.mod  all_video.mod  aout.mod  appleldr.mod  archelp.mod  at_keyboard.mod  ata.mod  ata_pthru.mod  backtrace.mod  befs.mod  befs_be.mod  bitmap.mod  bitmap_scale.mod  blocklist.mod  boot.mod  bsd.mod  btrfs.mod  bufio.mod  cat.mod  cbfs.mod  cbls.mod  cbmemc.mod  cbtable.mod  cbtime.mod  chain.mod  cmp.mod  command.lst  configfile.mod  cpio.mod  cpio_be.mod  cpuid.mod  crypto.mod  cryptodisk.mod  cs5536.mod  date.mod  datehook.mod  (+185 more)
boot/grub.efi/x86_64-efi/: acpi.mod  adler32.mod  affs.mod  afs.mod  afs_be.mod  ahci.mod  all_video.mod  aout.mod  appleldr.mod  archelp.mod  at_keyboard.mod  ata.mod  ata_pthru.mod  backtrace.mod  befs.mod  befs_be.mod  bfs.mod  bitmap.mod  bitmap_scale.mod  blocklist.mod  boot.mod  bsd.mod  bswap_test.mod  btrfs.mod  bufio.mod  cat.mod  cbmemc.mod  cbtable.mod  cbtime.mod  chain.mod  cmp.mod  cmp_test.mod  configfile.mod  cpio.mod  cpuid.mod  crc64.mod  crypto.lst  crypto.mod  cs5536.mod  ctz_test.mod  (+186 more)
boot/grub.pc/: README  REVISION  pc.img
boot/grub.pc/i386-pc/: acpi.mod  adler32.mod  affs.mod  afs.mod  afs_be.mod  at_keyboard.mod  ata.mod  ata_pthru.mod  backtrace.mod  befs.mod  biosdisk.mod  bitmap.mod  bitmap_scale.mod  blocklist.mod  boot.mod  bsd.mod  bswap_test.mod  btrfs.mod  bufio.mod  cat.mod  cbfs.mod  cbmemc.mod  cbtable.mod  cbtime.mod  chain.mod  cmdline_cat_test.mod  cmostest.mod  cmp_test.mod  configfile.mod  core.img  cpio.mod  cpuid.mod  crc64.mod  crypto.mod  cs5536.mod  date.mod  datehook.mod  disk.mod  diskfilter.mod  div.mod  (+179 more)
boot/grub/arm64-efi/: README
boot/grub/i386-pc/: aout.mod  befs_be.mod  bitmap.mod  cmp.mod  command.lst  cs5536.mod  datetime.mod  efiemu.mod  ext2.mod  functional_test.mod  gcry_cast5.mod  gcry_crc.mod  gcry_md4.mod  gcry_rfc2268.mod  gcry_rmd160.mod  gcry_sha256.mod  gptsync.mod  halt.mod  hdparm.mod  hexdump.mod  hfsplus.mod  iorw.mod  iso9660.mod  jfs.mod  keylayouts.mod  keystatus.mod  legacycfg.mod  loopback.mod  memrw.mod  minix2.mod  moddep.lst  multiboot.mod  normal.mod  ohci.mod  part_acorn.mod  part_sun.mod  part_sunpc.mod  pci.mod  raid.mod  read.mod  (+9 more)
boot/grub/ia32-pc/: pc.img
boot/silo/: README  build_dist.sh  meson.build  silo.conf
boot/tools/: pack.py
boot/yaboot/: build_dist.sh  maps  meson.build  ofboot.b  yaboot.conf
kernel/: Makefile  Makefile.build  Makefile.common  kernel.config  meson.build
kernel/doc/: AUTHORS  BUGS_FOUND  build  doxygroups.h  mm  synchronization
kernel/genarch/: Makefile.inc  meson.build
kernel/generic/: meson.build
kernel/test/: meson.build  test.c  test.h
kernel/tools/: genmap.py
uspace/: Makefile  Makefile.common  init.c  install.sh.in  meson.build  uspace.config
uspace/app/: Makefile.common  cc  ccom  cpp  meson.build
uspace/console/: Makefile  cons_has_data.ppm  cons_idle.ppm  console.c  console.h  gcons.c  gcons.h  helenos.ppm  screenbuffer.c
uspace/doc/: doxygroups.h  main_page.h  main_usb.h
uspace/drv/: meson.build
uspace/fb/: Makefile  ega.c  ega.h  fb.c  fb.h  font-8x16.c  font-8x16.h  main.c  main.h  ppm.c  ppm.h  sysio.h
uspace/fs/: Makefile  fs.c
uspace/init/: Makefile  init.c  init.h  version.c  version.h
uspace/ipcc/: Makefile  ipcc.c
uspace/kbd/: Makefile
uspace/klog/: Makefile  klog.c
uspace/lib/: Makefile.common  meson.build
uspace/libc/: Makefile  Makefile.toolchain  unistd.h
uspace/ns/: Makefile  ns.c
uspace/pci/: Makefile  pci.c  update-ids
uspace/rd/: Makefile  rd.c  rd.h
uspace/srv/: Makefile.common  meson.build
uspace/tester/: Makefile  tester.c  tester.h
uspace/tetris/: Makefile  screen.c  screen.h  shapes.c
(+13019 files in other folders)
